test/negative/DuplicateAttribute.hx
class DuplicateAttribute {
	static function main():Void {
		var value = <heredoc mode="smart" mode="preserve">text</heredoc>;
	}
}
